--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "35977c86-818b-4928-b1c0-5c502ad127e0"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
