--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
+    "angular-chart.js": "^1.1.1",
+    "chart.js": "^4.4.0",
     "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "ng2-charts": "^5.0.3",
+    "promise-mysql": "^5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -45,6 +51,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.0.5",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/chart.js": "^2.9.37",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
