--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
+    "@popperjs/core": "^2.11.8",
     "angular-chart.js": "^1.1.1",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "ionicons": "^7.0.0",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "ng2-charts": "^5.0.3",
     "promise-mysql": "^5.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
